Add gradle build. In cell diffing algo